@@ -372,12 +372,18 @@ unless (-d $info{'pgdata'} && defined $info{'owneruid'}) {
     error $info{'pgdata'} . ' is not accessible or does not exist';
 }
 
-# check that owner uig/gid is valid
+# check that owner uid/gid is valid
 unless (getpwuid $info{'owneruid'}) {
-    error 'The cluster is owned by user id '.$info{'owneruid'}.' which does not exist any more'
+    error 'The cluster is owned by user id '.$info{'owneruid'}.' which does not exist'
 }
 unless (getgrgid $info{'ownergid'}) {
-    error 'The cluster is owned by group id '.$info{'ownergid'}.' which does not exist any more'
+    error 'The cluster is owned by group id '.$info{'ownergid'}.' which does not exist'
+}
+# owneruid and configuid need to match, unless configuid is root
+if ($info{'configuid'} != 0 and $info{'configuid'} != $info{'owneruid'}) {
+    my $configowner = (getpwuid $info{'configuid'})[0] || "(unknown)";
+    my $dataowner = (getpwuid $info{'owneruid'})[0];
+    error "Config owner ($configowner:$info{configuid}) and data owner ($dataowner:$info{owneruid}) do not match, and config owner is not root";
 }
 
 # recreate missing standard log dir
